[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/material_spray/material.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="Shader" id=1]

code = "shader_type canvas_item;

uniform sampler2D tex : hint_white;

void fragment() {
	vec3 bg = vec3(vec3(2.0*fract(0.5*(floor(8.0*UV.x)+floor(8.0*UV.y)))));
	vec4 fg = texture(tex, UV);
	COLOR = vec4(bg*(1.0-fg.a) + fg.a*fg.xyz, 1.0);
}"

[sub_resource type="ShaderMaterial" id=2]

shader = SubResource( 1 )
shader_param/tex = ExtResource( 2 )

[node name="BrushConfig" type="VBoxContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -109.0
margin_top = -236.0
script = ExtResource( 1 )

[node name="Albedo" type="CheckBox" parent="."]
margin_right = 109.0
margin_bottom = 24.0
text = "Albedo"

[node name="AlbedoColor" type="ColorPickerButton" parent="."]
margin_top = 28.0
margin_right = 109.0
margin_bottom = 48.0
rect_min_size = Vector2( 64, 0 )

[node name="AlbedoTextureMode" type="OptionButton" parent="."]
margin_top = 52.0
margin_right = 109.0
margin_bottom = 72.0
text = "No texture"
items = [ "No texture", null, false, 0, null, "Stamp", null, false, -1, null, "Pattern", null, false, -1, null ]
selected = 0

[node name="AlbedoTexture" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_left = 22.0
margin_top = 76.0
margin_right = 86.0
margin_bottom = 140.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4

[node name="Metallic" type="CheckBox" parent="."]
margin_top = 144.0
margin_right = 109.0
margin_bottom = 168.0
text = "Metallic"

[node name="MetallicValue" type="HSlider" parent="."]
margin_top = 172.0
margin_right = 109.0
margin_bottom = 188.0
max_value = 1.0
step = 0.01
ticks_on_borders = true

[node name="Roughness" type="CheckBox" parent="."]
margin_top = 192.0
margin_right = 109.0
margin_bottom = 216.0
text = "Roughness"

[node name="RoughnessValue" type="HSlider" parent="."]
margin_top = 220.0
margin_right = 109.0
margin_bottom = 236.0
max_value = 1.0
step = 0.01
ticks_on_borders = true

[connection signal="pressed" from="Albedo" to="." method="_on_Checkbox_pressed"]
[connection signal="color_changed" from="AlbedoColor" to="." method="_on_Color_color_changed"]
[connection signal="pressed" from="Metallic" to="." method="_on_Checkbox_pressed"]
[connection signal="value_changed" from="MetallicValue" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Roughness" to="." method="_on_Checkbox_pressed"]
